--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,17 @@
 .webgl{
-    height: 30em !important;
-    width: 40em !important;
+    height: 37em !important;
+    width: 54em !important;
 }
+/* On screens that are 600px or less, set the background color to olive */
+@media (max-width: 915px) {
+    .webgl{
+        height: 20em !important;
+        width: 10em !important;
+    }
+  }
+@media (max-width: 400px) {
+    .webgl{
+        height: 2em !important;
+        width: 1em !important;
+    }
+  }
